// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocalKeyStore addAccount - nep2 without password 1`] = `[Error: Expected private key or password and NEP-2 key]`;

exports[`LocalKeyStore addAccount - no private key 1`] = `[Error: Expected private key or password and NEP-2 key]`;

exports[`LocalKeyStore deleteAccount - all and add back 1`] = `
Array [
  Array [
    Object {
      "account": Object {
        "configurableName": true,
        "deletable": true,
        "id": Object {
          "address": "ALq7AWrhAueN6mJNqk6FHJjnsEoPRytLdW",
          "network": "main",
        },
        "name": "Mock",
        "publicKey": "02028a99826edc0c97d18e22b6932373d908d323aa7f92656a77ec26e8861699ef",
        "type": "mock",
      },
      "nep2": "6PYLHmDf6AjF4AsVtosmxHuPYeuyJL3SLuw7J1U8i7HxKAnYNsp61HYRfF",
      "type": "locked",
    },
    undefined,
  ],
  Array [
    Object {
      "account": Object {
        "configurableName": true,
        "deletable": true,
        "id": Object {
          "address": "ALfnhLg7rUyL6Jr98bzzoxz5J7m64fbR4s",
          "network": "main",
        },
        "name": "Mock",
        "publicKey": "031d8e1630ce640966967bc6d95223d21f44304133003140c3b52004dc981349c9",
        "type": "mock",
      },
      "nep2": "6PYWVp3xfgvnuNKP7ZavSViYvvim2zuzx9Q33vuWZr8aURiKeJ6Zm7BfPQ",
      "privateKey": "9ab7e154840daca3a2efadaf0df93cd3a5b51768c632f5433f86909d9b994a69",
      "type": "unlocked",
    },
    undefined,
  ],
]
`;

exports[`LocalKeyStore getWallet - unknown address 1`] = `"Unknown account AVf4UGKevVrMR1j3UkPsuoYKSC4ocoAkKx"`;

exports[`LocalKeyStore getWallet - unknown network 1`] = `"Unknown account ALfnhLg7rUyL6Jr98bzzoxz5J7m64fbR4s"`;

exports[`LocalKeyStore sign - locked 1`] = `[Error [LOCKED_ACCOUNT]: Account ALq7AWrhAueN6mJNqk6FHJjnsEoPRytLdW is locked]`;

exports[`LocalKeyStore sign 1`] = `
Object {
  "invocation": "402f35cdfc4d76fbae89a8487d6e67df77211a3604207be56b2813a1a523f89615c1733857d9b264bcb0c34ee2650a622867fb29fb670972c736c19c6a790af506",
  "verification": "21031d8e1630ce640966967bc6d95223d21f44304133003140c3b52004dc981349c9ac",
}
`;

exports[`LocalKeyStore updateAccountName - locked 1`] = `
Array [
  Array [
    Object {
      "account": Object {
        "configurableName": true,
        "deletable": true,
        "id": Object {
          "address": "ALq7AWrhAueN6mJNqk6FHJjnsEoPRytLdW",
          "network": "main",
        },
        "name": "new name",
        "publicKey": "02028a99826edc0c97d18e22b6932373d908d323aa7f92656a77ec26e8861699ef",
        "type": "mock",
      },
      "nep2": "6PYLHmDf6AjF4AsVtosmxHuPYeuyJL3SLuw7J1U8i7HxKAnYNsp61HYRfF",
      "type": "locked",
    },
    undefined,
  ],
]
`;

exports[`LocalKeyStore updateAccountName - unlocked 1`] = `
Array [
  Array [
    Object {
      "account": Object {
        "configurableName": true,
        "deletable": true,
        "id": Object {
          "address": "ALfnhLg7rUyL6Jr98bzzoxz5J7m64fbR4s",
          "network": "main",
        },
        "name": "new name",
        "publicKey": "031d8e1630ce640966967bc6d95223d21f44304133003140c3b52004dc981349c9",
        "type": "mock",
      },
      "nep2": "6PYWVp3xfgvnuNKP7ZavSViYvvim2zuzx9Q33vuWZr8aURiKeJ6Zm7BfPQ",
      "privateKey": "9ab7e154840daca3a2efadaf0df93cd3a5b51768c632f5433f86909d9b994a69",
      "type": "unlocked",
    },
    undefined,
  ],
]
`;
